--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 numpy==1.23.5
 scikit-learn==1.2.2
 transformers
-torch
+torch==2.0.1+cpu
+torchvision==0.15.2+cpu
+torchaudio==2.0.2+cpu
 faiss-cpu
 sentencepiece
+fitz  # PyMuPDF
+watchdog
